# jantje

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  midi_arrange.py  midi_inspect.py  midi_to_sid.py  midi_to_sng.py  pyproject.toml  sng_to_lrc.py
.github/workflows/: ci.yml
tests/: test_smoke.py  test_sng_to_lrc.py
